# MASSTER

./: .gitignore  LICENSE  Makefile  PredictiveClusteringTree.py  README.md  output.txt  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
reports/semi_supervised/pct/atp7d/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
reports/semi_supervised/pct/enb/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
reports/semi_supervised/pct/friedman/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
reports/semi_supervised/pct/mp5spec/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
src/: __init__.py  config.py
src/data/: data_processing.py  dataframes_creation.py
src/evaluation/: active_learning_eval.py  evaluation.py  evaluation_active.py  evaluation_new.py  evaluation_paper.py  evaluation_tessst.py  test.ipynb
src/models/: active_learning.py  active_learning_module.py  cotraining.py  greedy_sampling.py  instance_based.py  instancebased_cotraining.py  pct.py  qbcrf.py  randomsampling.py  rtal.py  self_learning.py  selflearning.py  semi_supervised_learning.py  single_target_model.py  upperbound.py
src/models/active_learning/: active_learning.py  target_qbc.py
src/models/proposed_method/: masster.py  masster_ct.py  unlabeled_targets_update.py
src/models/semi-supervised_learning/: cotraining.py
src/models/semi_supervised_learning/: cotraining.py  self_learning.py
src/utils/: aux_active.py  data_handling.py  metrics.py
(+137 files in other folders)
